@@ -1,7 +1,7 @@
 Package: RcppSpdlog
 Type: Package
 Title: 'spdlog' C++ Header Library for Logging
-Version: 0.0.1
+Version: 0.0.1.1
 Date: 2020-08-18
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
@@ -12,3 +12,6 @@ Description: 'spdlog' is a mature and widely-used C++ library for logging with m
  via a simple 'LinkingTo:' inclusion. Note that you may not want to include 'spdlog' in a
  (release-ready) package as running checks it will reveal use of 'stdout' and 'stderr'. 
 License: GPL (>= 2)
+LinkingTo: Rcpp
+Imports: Rcpp
+RoxygenNote: 6.0.1
