@@ -1,0 +1,3 @@
+useDynLib(RcppSpdlog, .registration=TRUE)
+importFrom(Rcpp, evalCpp)
+exportPattern("^[[:alpha:]]+")
