@@ -1,0 +1,13 @@
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#' Fourth Example
+#'
+#' A simple example invoking a derived Rcpp logger.
+#'
+#' Note that this still triggers R warnings, so consider it work in progress.
+#' @return None
+exampleFour <- function() {
+    invisible(.Call(`_RcppSpdlog_exampleFour`))
+}
+
