@@ -1,0 +1,5 @@
+## We need C++11 to use TileDB's C++ API
+CXX_STD = CXX11
+
+## We need the spdlog headers
+PKG_CPPFLAGS =	-I../inst/include/
