@@ -1,0 +1,26 @@
+// Generated by using Rcpp::compileAttributes() -> do not edit by hand
+// Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#include <Rcpp.h>
+
+using namespace Rcpp;
+
+// exampleFour
+void exampleFour();
+RcppExport SEXP _RcppSpdlog_exampleFour() {
+BEGIN_RCPP
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    exampleFour();
+    return R_NilValue;
+END_RCPP
+}
+
+static const R_CallMethodDef CallEntries[] = {
+    {"_RcppSpdlog_exampleFour", (DL_FUNC) &_RcppSpdlog_exampleFour, 0},
+    {NULL, NULL, 0}
+};
+
+RcppExport void R_init_RcppSpdlog(DllInfo *dll) {
+    R_registerRoutines(dll, NULL, CallEntries, NULL, NULL);
+    R_useDynamicSymbols(dll, FALSE);
+}
